<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:layout_weight="0.85"
            android:text="@string/ring_prompt" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="true"
            android:prompt="@string/gear_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:layout_weight="1.69"
            android:text="@string/cog_prompt"  />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:drawSelectorOnTop="true"
            android:prompt="@string/gear_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="37dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:layout_weight="0.99"
            android:text="@string/wheelmeters_prompt" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:text="@string/wheelsize_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="37dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:layout_weight="0.99"
            android:text="@string/lapmeters_prompt" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:text="@string/tracksize_prompt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/SpinnerResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Result"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="x"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/SpinnerResult2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="Result"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/berdin"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="="
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dmetro"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:maxLength="4"
            android:text="x"
            android:textSize="8pt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/m_prompt"
            android:textSize="8pt"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <TableLayout
            android:id="@+id/myTableLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000" />
    </ScrollView>

</LinearLayout>